Fixing alignment of checkbox

--- a/src/components/todos/css/todos.css
+++ b/src/components/todos/css/todos.css
@@ -61,7 +61,7 @@ span.incompleted-percenteger {
     display: none !important;
 }
 
-.todo {
+.inner-content {
     margin-top: 20px;
 }
 
@@ -107,6 +107,7 @@ span.incompleted-percenteger {
     -webkit-transform: scale(1.5); /* Safari and Chrome */
     -o-transform: scale(1.5); /* Opera */
     padding: 10px;
+    display: inline-block;
 }
 
 .center {
